Implementación de las restricciones en los requests